--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
@@ -93,7 +93,7 @@
 										<div style="padding-bottom: 20px;">
 											<label>#{i18n.getText('CCG001_43')}</label>
 											<div class="pull-right" id="switch-buttons" data-bind="ntsSwitchButton: {
-												options: incumbent,
+												options: incumbentDatasource,
 												optionsValue: 'code',
 												optionsText: 'name',
 												value: selectedIncumbent,
@@ -103,17 +103,17 @@
 										<div style="padding-bottom: 20px;">
 											<label>#{i18n.getText('CCG001_47')}</label>
 											<div class="pull-right" id="switch-buttons" data-bind="ntsSwitchButton: {
-												options: closure,
+												options: closedDatasource,
 												optionsValue: 'code',
 												optionsText: 'name',
-												value: selectedClosureG,
+												value: selectedClosed,
 												enable: true }">
 											</div>
 										</div>
 										<div style="padding-bottom: 20px;">
 											<label>#{i18n.getText('CCG001_45')}</label>
 											<div class="pull-right" id="switch-buttons" data-bind="ntsSwitchButton: {
-												options: leaveOfAbsence,
+												options: leaveOfAbsenceDatasource,
 												optionsValue: 'code',
 												optionsText: 'name',
 												value: selectedLeave,
@@ -123,7 +123,7 @@
 										<div style="padding-bottom: 20px;">
 											<label>#{i18n.getText('CCG001_49')}</label>
 											<div class="pull-right" id="switch-buttons" data-bind="ntsSwitchButton: {
-												options: retirement,
+												options: retirementDatasource,
 												optionsValue: 'code',
 												optionsText: 'name',
 												value: selectedRetirement,
