[CCG001] fix bug typo

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
@@ -134,14 +134,14 @@
 											<div id="inp_baseDate" tabindex="1" data-bind="ntsDatePicker: {
 												name: '#[CCG001_93]',
 												dateFormat: 'YYYY/MM/DD',
-												value: periodStart,
+												value: periodStartYm,
 												required: true }">
 											</div> 
 											<span> ~ </span>
 											<div id="inp_baseDate" tabindex="2" data-bind="ntsDatePicker: {
 												name: '#[CCG001_94]',
 												dateFormat: 'YYYY/MM/DD',
-												value: periodEnd,
+												value: periodEndYm,
 												required: true }">
 											</div> 
 										</div>
