--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/010/cm/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/010/cm/index.xhtml
@@ -236,7 +236,7 @@
 			<!--A5_8 計算ボタン--> 			
 			<button data-bind="click: CaculationTime" tabindex="14" style="margin: 15px 0px 10px 290px;" class="caret-bottom">#{i18n.getText('KAF010_43')}</button>
 		</div>
-		<div class="cf valign-top control-group" data-bind="if: displayBreakTimeFlg">
+		<div class="cf valign-top control-group">
 			<!--A6_1 休出時間ラベル--> 		
 			<div class="cm-column" style="display: inline-block;">
 				<div class="lblTitle pull-left" data-bind="ntsFormLabel: {required : true}">#{i18n.getText('KAF010_50')}</div>
