--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/002/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/002/a/index.xhtml
@@ -17,10 +17,12 @@
 			<com:scriptfile path="/view/ccg/share/ccg.vm.js" of="/nts.uk.com.web" />
 
 			<com:stylefile path="cps002.a.style.css" />
+			<com:scriptfile path="/view/cps/shr/layout-control-ko-ext.js" />
+			<com:scriptfile path="/view/cps/shr/layout-control-validation.js" />
 			<com:scriptfile path="cps002.a.service.js" />
 			<com:scriptfile path="cps002.a.vm.js" />
 			<com:scriptfile path="cps002.a.start.js" />
-			<com:scriptfile path="/view/cps/shr/layout-control-ko-ext.js" />
+
 			<com:ValidatorScript>
 				nts.uk.ctx.bs.employee.dom.employeeinfo.EmployeeCode
 				nts.uk.ctx.sys.gateway.dom.login.UserName
@@ -425,7 +427,7 @@
 							<div class="div_line" data-bind="with: layout">
 								<div
 									data-bind="ntsLayoutControl: { 
-											data: listItemClsDto,
+											data: listItemCls,
 											editAble: 2 ,
 											outData: $parent.layoutData
 											}"></div>
