--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/026/component/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/026/component/index.xhtml
@@ -6,7 +6,7 @@
     xmlns:h="http://xmlns.jcp.org/jsf/html">
 <body>
     <ui:composition>
-        <table id="table-permission">
+        <table data-bind="attr: { id: 'table-permission-' + componentId }">
 		    <colgroup>
 		        <col width="250px"/>
 		        <col width="80px"/>
