--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/007/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/007/b/index.xhtml
@@ -89,7 +89,7 @@
 										data-bind="ntsTextEditor: {
 											name: '#[CMM007_13]',
 											value: com_jobtitle,
-											constraint: 'LongName',
+											constraint: 'ShortName',
 											required: true,
 											option: {width: '130px'}}" />
 								</td>
