[KDL003] Fix Bug #87884

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdl/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdl/003/a/index.xhtml
@@ -52,7 +52,8 @@
 											optionsValue: 'workTypeCode',
 											columns: workTypeColumns,
 											multiple: false,
-											value: selectedWorkTypeCode
+											value: selectedWorkTypeCode,
+											rows: 10
 										}"></table>
 								</td>
 								<td style="vertical-align: top; border-left: solid grey 1px;" colspan="2">
@@ -75,7 +76,8 @@
 											optionsValue: 'code',
 											columns: workTimeColumns,
 											multiple: false,
-											value: selectedWorkTimeCode
+											value: selectedWorkTimeCode,
+											rows: 10
 									}"></table>
 									</div>
 								</td>
