--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/003/a/index.xhtml
@@ -43,15 +43,17 @@
 					<button data-bind="visible: showButton().available4">#{i18n.getText('KDW003_5')}</button>
 					<button data-bind="visible: showButton().available2">#{i18n.getText('KDW003_6')}</button>
 					<button data-bind="visible: showButton().available3">#{i18n.getText('KDW003_12')}</button>
-					<button data-bind="click: employmentOk">#{i18n.getText('KDW003_65')}</button>
+					<button data-bind="click: employmentOk, visible:false">#{i18n.getText('KDW003_65')}</button>
 					<button
 						data-bind="click : changeExtractionCondition, visible: showButton().available5">#{i18n.getText('KDW003_13')}</button>
 					<button
 						data-bind="click : selectDisplayItem, visible: showButton().available8Authority">#{i18n.getText('KDW003_14')}</button>
-					<button data-bind="visible: showButton().available22">#{i18n.getText('KDW003_15')}</button>
+					<button data-bind="visible: false">#{i18n.getText('KDW003_15')}</button>
+					<!-- showButton().available22 -->
 					<button class="danger"
 						data-bind="click: showErrorDialog , visible: showButton().available24">#{i18n.getText('KDW003_16')}</button>
-					<button data-bind="visible: showButton().available7">#{i18n.getText('KDW003_17')}</button>
+					<button data-bind="visible: false">#{i18n.getText('KDW003_17')}</button>
+					<!-- visible: showButton().available7 -->
 				</div>
 			</div>
 			<div id="contents-area">
@@ -80,7 +82,8 @@
 					<button id="btnExtraction" data-bind="click: btnExtraction_Click">#{i18n.getText('KDW003_20')}</button>
 					<div class="vacationRemaining-container">
 						<button id="btnVacationRemaining"
-							data-bind="click: btnVacationRemaining_Click , visible: referenceVacation().allVacation">#{i18n.getText('KDW003_21')}</button>
+							data-bind="click: btnVacationRemaining_Click , false">#{i18n.getText('KDW003_21')}</button>
+							<!-- visible: referenceVacation().allVacation -->
 						<div id="vacationRemaining-content">
 							<button data-bind="visible: referenceVacation().yearHoliday20">#{i18n.getText('Com_PaidHoliday')}</button>
 							<button data-bind="visible: referenceVacation().substVacation">#{i18n.getText('Com_SubstituteHoliday')}</button>
@@ -88,17 +91,10 @@
 							<button data-bind="visible: referenceVacation().compensLeave">#{i18n.getText('Com_CompensationHoliday')}</button>
 							<button data-bind="visible: referenceVacation().com60HVacation">#{i18n.getText('Com_ExsessHoliday')}</button>
 						</div>
-					</div>
-					<button id="btnComfirmAttendance"
-						data-bind="click : referencesActualResult, visible: showButton().available23">#{i18n.getText('KDW003_22')}</button>
-					<div id="container">
-						<table>
-							<tr>
-								<td>
-									<div id="emp-component"></div>
-								</td>
-								<td>
-									<div id="numberHoliday">
+						<button id="btnComfirmAttendance"
+							data-bind="click : referencesActualResult, visible: false">#{i18n.getText('KDW003_22')}</button>
+							<!-- visible: showButton().available23 -->
+						<div id="numberHoliday">
 										<table id="fixed-table">
 											<thead>
 												<tr>
@@ -122,9 +118,9 @@
 											</tbody>
 										</table>
 									</div>
-								</td>
-							</tr>
-						</table>
+					</div>
+						<div id="container">
+						<div id="emp-component"></div>
 					</div>
 					<div id="cbListDate">
 						<div id="choosenDate"
@@ -135,7 +131,7 @@
 											endDate: dateRanger().endDate}">
 						</div>
 					</div>
-					<div id="content-grid">
+					<!-- <div id="content-grid"> -->
 						<div id="content-grid-not">
 							<button id="btn-signAll"
 								data-bind="click: signAll, visible: showButton().available25">#{i18n.getText('KDW003_23')}</button>
@@ -176,7 +172,7 @@
 					</div>
 					<div id="tooltip"><span id="textLock"></span></div>
 				</div>
-			</div>
+			<!-- </div> -->
 		</ui:define>
 	</ui:composition>
 </body>
