--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/003/a/kdw003.a.style.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/003/a/kdw003.a.style.css
@@ -8,7 +8,7 @@
 }
 
 #btnVacationRemaining {
-	margin-left: 200px;
+	margin-left: 50px;
 }
 
 #dislayFormatLbl {
@@ -45,7 +45,8 @@
 
 .grid-container {
 	margin: 15px 0 0 0px;
-	margin-top: 7px;
+    margin-top: -36px;
+    float: left;
 }
 
 .setting-container {
@@ -136,15 +137,16 @@
 	border: 1px solid #CCC;
 	text-align: center;
 	height: 29px;
+	width: 50px;
 }
 #fixed-table .ui-widget-body{
 	border: 1px solid #CCC;
 	text-align: right;
     height: 29px;
 }
-#fixed-table .ui-widget-body .text-holiday{ 
+/* #fixed-table .ui-widget-body .text-holiday{ 
 	margin-right: 10px;
-}
+} */
 #fixed-table {
 	border: 2px solid #CCC;
 	text-align: center;
@@ -152,11 +154,14 @@
 	width: 400px;
 }
 #numberHoliday {
-	margin-left: 5px;
+	/* margin-left: 5px;
 	height: 80px;
-	margin-top: 4px;}
+	margin-top: 4px; */
+	float: right;
+	margin-left: 120px;
+	}
 #emp-component{
-	margin-top: 10px;
+	margin-top: -33px;
 	margin-left: -10px;
 }
 .ui-iggrid .ui-iggrid-headercaption, .ui-iggrid .ui-iggrid-header, .ui-iggrid .ui-iggrid-toolbar {
@@ -168,10 +173,11 @@
     top: 93px;
 }
 #content-grid-not{
-	height: 20px ;
+/* 	height: 20px ;
 	position: relative;
 	bottom: -30px;
-	margin-right: 300px;
+	margin-right: 300px; */
+	margin-top: -3px;
 }
 .ui-iggrid-results{
 	background-color: #e9e9e9;
@@ -181,6 +187,10 @@
 }
 .nts-grid-wrapper table tr td.ui-state-hover, .nts-grid-wrapper table tr.ui-ig-altrecord td.ui-state-hover,  .nts-grid  tr.ui-ig-altrecord td.ui-state-hover{
 	background-color: #f5f5dc ;
+}
+#right-content {
+    margin-left: 80px;
+     width: 1400px !IMPORTANT;
 }
 /* .nts-grid  tr.ui-ig-altrecord td.ui-state-active{
 	background-color: #007fff !IMPORTANT;
