fix css  kdw/003/a

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/003/a/kdw003.a.style.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/003/a/kdw003.a.style.css
@@ -151,7 +151,7 @@
 	border: 2px solid #CCC;
 	text-align: center;
 	padding: 0 2px;
-	width: 400px;
+	/* width: 400px; */
 }
 #numberHoliday {
 	/* margin-left: 5px;
