--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/003/a/index.xhtml
@@ -98,10 +98,10 @@
 										<table id="fixed-table">
 											<thead>
 												<tr>
-													<th class="ui-widget-header" rowspan="2">#{i18n.getText('KDW003_7',["#Com_CompensationHoliday"])}</th>
-													<th class="ui-widget-header" rowspan="2">#{i18n.getText('KDW003_7',["#Com_SubstituteHoliday"])}</th>
-													<th class="ui-widget-header" rowspan="2">#{i18n.getText('KDW003_7',["#Com_PaidHoliday"])}</th>
-													<th class="ui-widget-header" rowspan="2">#{i18n.getText('KDW003_7',["#Com_FundedPaidHoliday"])}</th>
+													<th class="ui-widget-header" style="width: 65px">#{i18n.getText('KDW003_7',["#Com_CompensationHoliday"])}</th>
+													<th class="ui-widget-header" style="width: 65px">#{i18n.getText('KDW003_7',["#Com_SubstituteHoliday"])}</th>
+													<th class="ui-widget-header" style="width: 65px">#{i18n.getText('KDW003_7',["#Com_PaidHoliday"])}</th>
+													<th class="ui-widget-header" style="width: 100px">#{i18n.getText('KDW003_7',["#Com_FundedPaidHoliday"])}</th>
 												</tr>
 											</thead>
 											<tbody>
