--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/003/a/index.xhtml
@@ -136,7 +136,7 @@
 							<button id="btn-signAll"
 								data-bind="click: signAll, visible: showButton().available25">#{i18n.getText('KDW003_23')}</button>
 							<div class="setting-container">
-								<button id="btn-setting" data-bind="click: btnSetting_Click">&#9881;</button>
+								<button id="btn-setting" data-bind="click: btnSetting_Click , visible:false">&#9881;</button>
 								<div id="setting-content">
 									<div data-bind="ntsFormLabel: {}">#{i18n.getText('KDW003_28')}</div>
 									<div id="cbCursorMoveDirection"
