--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/007/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/007/b/index.xhtml
@@ -46,8 +46,9 @@
 						<tr tabindex="-1">
 							<td class="bg-green titleScheduleSetting" >#{i18n.getText('KSU007_11')}</td>
 							<td class="valueScheduleSetting">
-								<span data-bind="text: executionTotal"></span>
-								<span>#{i18n.getText('KSU007_12')}</span>
+								<span class="executionStateTime" data-bind="text: executionState"></span>
+								<span class="errorCount">#{i18n.getText('KSU007_12')}</span>
+								<span>:</span>
 								<span data-bind="text: executionError"></span>
 							</td>
 						</tr>
