--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/007/b/ksu007.b.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/007/b/ksu007.b.main.css
@@ -35,9 +35,18 @@
 	margin-top: 60px;
 }
 
+.executionStateTime {
+	margin-left: 25px;
+}
+
+.errorCount {
+	margin-left: 50px;
+}
+
 ul.countdown {
 	list-style: none;
 	display: block;
+	margin-left: 25px;
 }
 
 ul.countdown li {
