update code CMM021

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/021/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/021/a/index.xhtml
@@ -48,7 +48,7 @@
 						<div data-bind="ntsFormLabel: {}" style="margin-bottom: 10px;">#{i18n.getText('CMM021_8')}</div>
 						<!-- A5_2 -->
 						<div tabindex="4" class="base-date-editor" style="margin-left: 20px;"
-							data-bind=" ntsDatePicker: {dateFormat: 'YYYY/MM/DD', value: baseDate, name: '#[CMM021_8]', required: true}"></div>
+							data-bind=" ntsDatePicker: {dateFormat: 'YYYY/MM/DD', value: inputDate, name: '#[CMM021_8]', required: true}"></div>
 						<!-- A5_3 -->	
 						<button tabindex="5" data-bind="click: loadUserInfo" style="width: 60px; margin-left: 3px" class="button-load-user-info">#{i18n.getText('CMM021_9')}</button>
 					</div>
