--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
@@ -10,8 +10,9 @@
 				<div id="inp_baseDate" tabindex="1" data-bind="ntsDatePicker: {
 					name: '#[CCG001_27]',
 					dateFormat: 'YYYY/MM/DD',
+					valueFormat: 'YYYY/MM/DD',
 					value: baseDate,
-					required: true }"></div> 
+					required: true }"></div>
 			</div>
 			<div class="control-group ccg001-control-group">
 				<div data-bind="ntsFormLabel: {required: true}">#{i18n.getText('CCG001_28')}</div>
@@ -20,26 +21,44 @@
 					options: closureList,
 					optionsValue: 'id',
 					value: selectedClosure,
-					optionsText: 'name',
+					optionsText: 'closureName',
 					editable: false,
 					enable: true,
 					columns: [
-						{ prop: 'id', length: 1 },
-						{ prop: 'name', length: 5 },
+						{ prop: 'closureId', length: 1 },
+						{ prop: 'closureName', length: 5 },
 					]}"></div>
 			</div>
 			<div class="control-group ccg001-control-group">
 				<div data-bind="ntsFormLabel: {required: true}">#{i18n.getText('CCG001_29')}</div>
-				<div id="inp_baseDate" tabindex="3" data-bind="ntsDatePicker: {
-					name: '#[CCG001_30]',
-					dateFormat: 'YYYY/MM/DD',
-					value: periodStartDate,
-					required: true }"></div> 
-					<div id="inp_baseDate" tabindex="4" data-bind="ntsDatePicker: {
-					name: '#[CCG001_31]',
-					dateFormat: 'YYYY/MM/DD',
-					value: periodEndDate,
-					required: true }"></div> 
+				<com:ko tag="ifnot" bind="showPeriodYM">
+					<div id="inp-period-startYMD" tabindex="3" data-bind="ntsDatePicker: {
+						name: '#[CCG001_30]',
+						dateFormat: 'YYYY/MM/DD',
+						valueFormat: 'YYYY/MM/DD',
+						value: periodStartYm,
+						required: true }"></div>
+						<div id="inp-period-endYMD" tabindex="4" data-bind="ntsDatePicker: {
+						name: '#[CCG001_31]',
+						dateFormat: 'YYYY/MM/DD',
+						valueFormat: 'YYYY/MM/DD',
+						value: periodEndYm,
+						required: true }"></div>
+				</com:ko>
+				<com:ko tag="if" bind="showPeriodYM">
+					<div id="inp-period-startYM" tabindex="3" data-bind="ntsDatePicker: {
+						name: '#[CCG001_30]',
+						dateFormat: 'YYYY/MM/DD',
+						valueFormat: 'YYYY/MM/DD',
+						value: periodStartDate,
+						required: true }"></div> 
+						<div id="inp-period-endYM" tabindex="4" data-bind="ntsDatePicker: {
+						name: '#[CCG001_31]',
+						dateFormat: 'YYYY/MM/DD',
+						valueFormat: 'YYYY/MM/DD',
+						value: periodEndDate,
+						required: true }"></div> 
+				</com:ko>
 				<button tabindex="5" id="zcxvzxcv" class="proceed" data-bind="click: applyDataSearch">#{i18n.getText('CCG001_2')}</button>
 			</div>
 		<div tabindex="6" id="tab-panel" class="cf ccg-tabpanel pull-left"
@@ -130,16 +149,18 @@
 											</div>
 										</div>
 										<div class="pull-right" style="padding-top: 10px;">
-											<div id="inp_baseDate" tabindex="1" data-bind="ntsDatePicker: {
+											<div id="ccg001-partg-start" tabindex="1" data-bind="ntsDatePicker: {
 												name: '#[CCG001_93]',
 												dateFormat: 'YYYY/MM/DD',
+												valueFormat: 'YYYY/MM/DD',
 												value: periodStartYm,
 												required: true }">
 											</div> 
 											<span> ~ </span>
-											<div id="inp_baseDate" tabindex="2" data-bind="ntsDatePicker: {
+											<div id="ccg001-partg-end" tabindex="2" data-bind="ntsDatePicker: {
 												name: '#[CCG001_94]',
 												dateFormat: 'YYYY/MM/DD',
+												valueFormat: 'YYYY/MM/DD',
 												value: periodEndYm,
 												required: true }">
 											</div> 
