[KDL003] Fix Param return to MainScreen

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdl/003/demo/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdl/003/demo/index.xhtml
@@ -69,11 +69,17 @@
 				<div> Selected Work Time Name:</div>
 				<span data-bind="text: childSelectSiftName"></span>
 				
-				<div> First Time Zone:</div>
-				<span data-bind="text: firstTime"></span>
+				<div> First Start Time Zone:</div>
+				<span data-bind="text: firstStartTime"></span>
 				
-				<div> Second Time Zone:</div>
-				<span data-bind="text: secondTime"></span>
+				<div> First End Time Zone:</div>
+				<span data-bind="text: firstEndTime"></span>
+				
+				<div> Second Start Time Zone:</div>
+				<span data-bind="text: secondStartTime"></span>
+				
+				<div> Second End Time Zone:</div>
+				<span data-bind="text: secondEndTime"></span>
 			</div>
 		</ui:define>
 	</ui:composition>
