--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/base.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/base.xhtml
@@ -52,7 +52,8 @@
 																		enable: enable,
 																		constraint: 'MonthlyNumberOfDays',
 																		required: true,
-																		option: {width: '90px'},
+																		option: {width: '90px',
+																				 decimallength: 1,},
 																		name:'#[KMF002_13]'}"></input>
 								<span>日</span>
 							</div>	
