--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/a_index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/a_index.xhtml
@@ -178,7 +178,9 @@
 							<input id="inLegalHoliday16" data-bind="ntsNumberEditor: {
 																	value: weekHDSet().inLegalHoliday,
 																	constraint: 'WeekNumberOfDay',
-																	option: {width: '85px'}, 
+																	option: {width: '85px',
+																			 decimallength: 1,
+																	}, 
 																	required: true,
 																	enable: enableWeekHDSetInLegalHoliday,
 																	readonly: false,
@@ -196,7 +198,8 @@
 							<input id="outLegalHoliday17" data-bind="ntsNumberEditor: {
 																	value: weekHDSet().outLegalHoliday,
 																	constraint: 'WeekNumberOfDay',
-																	option: {width: '85px'}, 
+																	option: {width: '85px',
+																			 decimallength: 1,}, 
 																	required: true,
 																	enable: enableWeekHDSetOutLegalHoliday,
 																	readonly: false,
@@ -243,7 +246,8 @@
 									<input tabindex="18" id="inLegalHoliday18" data-bind="ntsNumberEditor: {
 																			value: fourWkFourHDNumSet().oneWeek().inLegalHoliday,
 																			constraint: 'WeekNumberOfDay',
-																			option: {width: '85px'}, 
+																			option: {width: '85px',
+																			 decimallength: 1,}, 
 																			required: true,
 																			enable: enableOneWeekPubHDInLegalHD,
 																			readonly: false,
@@ -257,7 +261,8 @@
 									<input tabindex="19" id="outLegalHoliday19" data-bind="ntsNumberEditor: {
 																		value: fourWkFourHDNumSet().oneWeek().outLegalHoliday,
 																		constraint: 'WeekNumberOfDay',
-																		option: {width: '85px'}, 
+																		option: {width: '85px',
+																			 decimallength: 1,}, 
 																		required: true,
 																		enable: enableOneWeekPubHDOutLegalHD,
 																		readonly: false},
@@ -282,7 +287,8 @@
 											<input tabindex="20" id="inLegalHoliday20" data-bind="ntsNumberEditor: {
 																			value: fourWkFourHDNumSet().oneWeek().lastWeekAddedDays().inLegalHoliday,
 																			constraint: 'WeekNumberOfDay',
-																			option: {width: '85px'}, 
+																			option: {width: '85px',
+																			 decimallength: 1,}, 
 																			required: true,
 																			enable: enableLastPeriod1WeekPubHD,
 																			readonly: false},
@@ -296,7 +302,8 @@
 											<input tabindex="21" id="outLegalHoliday21" data-bind="ntsNumberEditor: {
 																			value: fourWkFourHDNumSet().oneWeek().lastWeekAddedDays().outLegalHoliday,
 																			constraint: 'WeekNumberOfDay',
-																			option: {width: '85px'}, 
+																			option: {width: '85px',
+																			 decimallength: 1,}, 
 																			required: true,
 																			enable: enableLastPeriod1WeekPubHD,
 																			readonly: false},
@@ -339,7 +346,8 @@
 										<input tabindex="22" id="inLegalHoliday22" data-bind="ntsNumberEditor: {
 																							value: fourWkFourHDNumSet().fourWeek().inLegalHoliday,
 																							constraint: 'FourWeekDay',
-																							option: {width: '85px'}, 
+																							option: {width: '85px',
+																									 decimallength: 1,}, 
 																							required: true,
 																							enable: enable4WeeksPubHDInLegalHD,
 																							readonly: false,
@@ -354,7 +362,8 @@
 										<input tabindex="23" id="outLegalHoliday23" data-bind="ntsNumberEditor: {
 																							value: fourWkFourHDNumSet().fourWeek().outLegalHoliday,
 																							constraint: 'FourWeekDay',
-																							option: {width: '85px'}, 
+																							option: {width: '85px',
+																									 decimallength: 1,}, 
 																							required: true,
 																							enable: enable4WeeksPubHDOutLegalHD,
 																							readonly: false,
@@ -380,7 +389,8 @@
 											<input tabindex="24" id="inLegalHoliday24" data-bind="ntsNumberEditor: {
 																								value: fourWkFourHDNumSet().fourWeek().lastWeekAddedDays().inLegalHoliday,
 																								constraint: 'FourWeekDay',
-																								option: {width: '85px'}, 
+																								option: {width: '85px',
+																										 decimallength: 1,}, 
 																								required: true,
 																								enable: enableLastPeriod4WeekPubHD,
 																								readonly: false,
@@ -395,7 +405,8 @@
 											<input tabindex="25" id="outLegalHoliday25" data-bind="ntsNumberEditor: {
 																									value: fourWkFourHDNumSet().fourWeek().lastWeekAddedDays().outLegalHoliday,
 																									constraint: 'FourWeekDay',
-																						            option: {width: '85px'}, 
+																						            option: {width: '85px',
+																											 decimallength: 1,}, 
 																									required: true,
 																									enable: enableLastPeriod4WeekPubHD,
 																									readonly: false,
