--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/003/a/index.xhtml
@@ -134,7 +134,11 @@
 					<!-- <div id="content-grid"> -->
 						<div id="content-grid-not">
 							<button id="btn-signAll"
-								data-bind="click: signAll, visible: showButton().available25">#{i18n.getText('KDW003_23')}</button>
+								data-bind="click: signAll" >#{i18n.getText('KDW003_23')}</button>
+							<button id="btn-legend"
+								data-bind="ntsLegendButton: legendOptions">凡例</button>
+							<button id="btn-saveColumnWidth"
+								data-bind="click: btnSaveColumnWidth_Click, visible : showButton().available8">#{i18n.getText('KDW003_24')}</button>
 							<div class="setting-container">
 								<button id="btn-setting" data-bind="click: btnSetting_Click , visible:false">&#9881;</button>
 								<div id="setting-content">
@@ -158,10 +162,6 @@
 									<br />
 								</div>
 							</div>
-							<button id="btn-legend"
-								data-bind="ntsLegendButton: legendOptions">凡例</button>
-							<button id="btn-saveColumnWidth"
-								data-bind="click: btnSaveColumnWidth_Click, visible : showButton().available8">#{i18n.getText('KDW003_24')}</button>
 						</div>
 						<div class="compact-grid grid-container" id="gid">
 							<table id="dpGrid"></table>
