--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/000/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/000/b/index.xhtml
@@ -61,50 +61,65 @@
 					<!-- B1_3 -->
 					<button data-bind="click: btnAfter, enable: enableAfter"><i class="icon icon-button-arrow-right"></i></button>
 					<!-- B1_4 -->
-					<button class="proceed" data-bind="click: btnApprove, 
-													enable: displayButtonControl().enableApproval() &amp; $root.errors.isEmpty(),
-													visible: !displayButtonControl().displayApproval()">#{i18n.getText('KAF000_15')}</button>
+					<div class="controlButtonCell_kaf000" data-bind="if: displayApprovalButton">
+						<button class="proceed" data-bind="click: btnApprove, 
+													enable: enableApprovalButton() &amp;&amp; $root.errors.isEmpty()
+													">#{i18n.getText('KAF000_15')}</button>		
+					</div>
 					<!-- B1_14 -->
-					<div class="comment" data-bind="visible: !displayButtonControl().displayApprovalLabel()">
-						<label>【承認】</label>
+					<div class="controlButtonCell_kaf000" data-bind="if: displayApprovalLabel">
+						<div class="comment">
+							<label>【承認】</label>
+						</div>		
 					</div>
 					<!-- B1_5 -->
-					<button data-bind="click: btnDeny, 
-									enable: displayButtonControl().enableDeny() &amp; $root.errors.isEmpty(),
-									visible: !displayButtonControl().displayDeny()" >#{i18n.getText('KAF000_16')}</button>
+					<div class="controlButtonCell_kaf000" data-bind="if: displayDenyButton">
+						<button data-bind="click: btnDeny, 
+									enable: enableDenyButton() &amp;&amp; $root.errors.isEmpty()
+									">#{i18n.getText('KAF000_16')}</button>		
+					</div>
 					<!-- B1_15 -->
-					<div class="comment" data-bind="visible: !displayButtonControl().displayDenyLabel()">
-						<label>【否認】</label>
+					<div class="controlButtonCell_kaf000" data-bind="if: displayDenyLabel">
+						<div class="comment">
+							<label>【否認】</label>
+						</div>		
 					</div>
 					<!-- B1_6 -->
-					<button data-bind="enable: displayButtonControl().enableRemand() &amp; $root.errors.isEmpty(),
-									   visible: !displayButtonControl().displayRemand()">#{i18n.getText('KAF000_17')}</button>
+					<div class="controlButtonCell_kaf000" data-bind="if: displayRemandButton">
+						<button data-bind="enable: enableRemandButton() &amp;&amp; $root.errors.isEmpty()
+									   ">#{i18n.getText('KAF000_17')}</button>		
+					</div>
 					<!-- B1_7 -->
-					<button data-bind="click: btnRelease, 
-									enable: displayButtonControl().enableRelease() &amp; $root.errors.isEmpty(),
-									visible: !displayButtonControl().displayRelease()" >#{i18n.getText('KAF000_18')}</button>
-					
+					<div class="controlButtonCell_kaf000" data-bind="if: displayReleaseButton">
+						<button data-bind="click: btnRelease, 
+									enable: enableReleaseButton() &amp;&amp; $root.errors.isEmpty()
+									">#{i18n.getText('KAF000_18')}</button>		
+					</div>
 					<!-- B1_8 -->
-					<button class="proceed" data-bind="click: update,
-													enable : displayButtonControl().enableUpdate() &amp; $root.errors.isEmpty(), 
--													visible: !displayButtonControl().displayUpdate()">#{i18n.getText('KAF000_19')}</button>	
-
+					<div class="controlButtonCell_kaf000" data-bind="if: displayUpdateButton">
+						<button class="proceed" data-bind="click: update, enable : enableUpdateButton() &amp;&amp; $root.errors.isEmpty()">#{i18n.getText('KAF000_19')}</button>	
+							
+					</div>
 					<!-- B1_9 -->
-					<button >#{i18n.getText('KAF000_20')}</button>
+					<div class="controlButtonCell_kaf000">
+						<button >#{i18n.getText('KAF000_20')}</button>		
+					</div>
 					<!-- B1_10 -->
-					<button data-bind="click: btnReferences" >#{i18n.getText('KAF000_21')}</button>
+					<div class="controlButtonCell_kaf000">
+						<button data-bind="click: btnReferences" >#{i18n.getText('KAF000_21')}</button>		
+					</div>
 					<!-- B1_11 -->
-					<button data-bind="click: btnSendEmail" >#{i18n.getText('KAF000_22')}</button>
-					
+					<div class="controlButtonCell_kaf000">
+						<button data-bind="click: btnSendEmail" >#{i18n.getText('KAF000_22')}</button>		
+					</div>
 					<!-- B1_12 -->
-					<button  class="danger" data-bind="click: btnDelete,
-													enable : displayButtonControl().enableDelete() &amp; $root.errors.isEmpty(),
--													visible: !displayButtonControl().displayDelete()" >#{i18n.getText('KAF000_23')}</button>
-					
+					<div class="controlButtonCell_kaf000" data-bind="if: displayDeleteButton">
+						<button  class="danger" data-bind="click: btnDelete, enable : enableDeleteButton() &amp;&amp; $root.errors.isEmpty()">#{i18n.getText('KAF000_23')}</button>		
+					</div>
 					<!-- B1_13 -->
-					<button  class="danger" data-bind="click: btnCancel , 
-													enable : displayButtonControl().enableCancel() &amp; $root.errors.isEmpty(),
-													visible: !displayButtonControl().displayCancel()">#{i18n.getText('KAF000_24')}</button>
+					<div class="controlButtonCell_kaf000" data-bind="if: displayCancelButton">
+						<button  class="danger" data-bind="click: btnCancel, enable : enableCancelButton() &amp;&amp; $root.errors.isEmpty()">#{i18n.getText('KAF000_24')}</button>		
+					</div>
 					<br></br>
 				</div>
 			</div>
