--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
@@ -59,9 +59,11 @@
                     </div>
 				</com:ko-if>
 				<com:ko-if bind="currentTab()==='m'">
-					<button  id="btn_001" class="button separate-button fix-button"  data-bind="click: $parent.viewmodelM.update">#{i18n.getText('KAF022_1')}</button>
-					<button  id="btn_002" class="button proceed separate-button fix-button" data-bind="click: $parent.viewmodelM.openDialogCopy, enable: $parent.viewmodelM.isUpdateMode">#{i18n.getText('KAF022_274')}</button>
-					<button  id="btn_004" class="button danger separate-button fix-button" data-bind="click: $parent.viewmodelM.remove, enable: $parent.viewmodelM.isUpdateMode" >#{i18n.getText('KAF022_275')}</button>
+					<div class="center-content-kaf022l">
+						<button  id="btn_001" class="button proceed separate-button fix-button"  data-bind="click: $parent.viewmodelM.update">#{i18n.getText('KAF022_1')}</button>
+						<button  id="btn_002" class="button separate-button fix-button" data-bind="click: $parent.viewmodelM.openDialogCopy, enable: $parent.viewmodelM.isUpdateMode">#{i18n.getText('KAF022_274')}</button>
+						<button  id="btn_004" class="button danger separate-button fix-button" data-bind="click: $parent.viewmodelM.remove, enable: $parent.viewmodelM.isUpdateMode" >#{i18n.getText('KAF022_275')}</button>
+					</div>
 				</com:ko-if>
 			</div>
 			<div id="tabpanel-a" role="tabpanel" class="screen-a"
