--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/l/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/l/index.xhtml
@@ -2,11 +2,11 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:com="http://xmlns.jcp.org/jsf/component"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
-	<div class="contents-area block-style">
-		<div id="left-content">
+	<div id="contents-area" class="fixed-flex-layout">
+		<div class="fixed-flex-layout-left">
 			<div id="empt-list-setting"></div>
 		</div>
-		<div id="right-content">			
+		<div class="fixed-flex-layout-right">			
 			<div class="block-style">
 				<!--L4_1 単位情報--> 
 				<div data-bind="ntsFormLabel: {}">#{i18n.getText('KAF022_276',['#Com_Employment'])}</div>
