[ccg001] update ccg advance search (mock data)

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
@@ -217,7 +217,7 @@
 								</div>
 							</div>
 							<div class="pull-left" style="height: 100%">
-								<div tabindex="17" class="btn_apply" data-bind="click: applyEmployee">
+								<div tabindex="17" class="btn_apply" data-bind="click: advancedSearchEmployee">
 									<div style="display:table-cell;vertical-align:middle;">
 										<div class="lbl-apply">#{i18n.getText('CCG001_25')}</div>
 									</div>
@@ -230,7 +230,7 @@
 										id="employeeinfo"></div>
 								</div>
 								<div class="pull-left" style="height: 100%">
-									<div tabindex="19" class="btn_apply" data-bind="click: searchDataEmployee">
+									<div tabindex="19" class="btn_apply" data-bind="click: extractSelectedEmployees">
 										<div style="display:table-cell;vertical-align:middle;">
 											<i class="icon icon-01-searchmode"></i>
 											<div class="lbl-apply">#{i18n.getText('CCG001_26')}</div>
