KSU001: update code

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/001/a/ksu001.a.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/001/a/ksu001.a.main.css
@@ -320,3 +320,13 @@ table th, table td {
 .ml-15 {
 	margin-left: 15px
 }
+
+tbody a.x-link {
+	color: black !important;
+	text-decoration: none !important;
+	cursor: unset !important;
+}
+
+#oViewModel>div:FIRST-CHILD {
+	position: relative;
+}
