--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/001/o/ksu001.o.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/001/o/ksu001.o.main.css
@@ -3,6 +3,14 @@
 	float: left;
 }
 
+#oViewModel  #set-work-type, #oViewModel #set-work-time {
+	position: absolute;
+}
+
+#oViewModel #set-work-time {
+	top: 29px;
+}
+
 #oViewModel #time-edit1 {
 	text-align: center !important;
 	width: 43px !important;
