--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
@@ -74,14 +74,14 @@
 						</div>
 						<span class="controlSettingBg caret-right"></span>
 					</div>
-					<div tabindex="9" class="btn-quick-search" data-bind="if: isEmployeeOfWorkplace, click: searchOfWorkplace">
+					<div tabindex="9" class="btn-quick-search" data-bind="if: isEmployeeOfWorkplace, click: quickSearchEmployee">
 						<div class="flex valign-center btn_small">
 							<i class="icon icon-48-ofworkplace"></i>
 							<label class="labelSmallButton">#{i18n.getText('CCG001_12')}</label> 
 						</div>
 						<span class="controlSetting caret-right"></span>
 					</div>
-					<div tabindex="10" class="btn-quick-search" data-bind="if: isEmployeeWorkplaceFollow, click: searchWorkplaceChild">
+					<div tabindex="10" class="btn-quick-search" data-bind="if: isEmployeeWorkplaceFollow, click: quickSearchEmployee">
 						<div class="flex valign-center btn_small">
 							<i class="icon icon-49-workplacechild"></i>
 							<label class="labelSmallButton">#{i18n.getText('CCG001_13')}</label> 
