--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/a_index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/a_index.xhtml
@@ -179,7 +179,6 @@
 																	value: weekHDSet().inLegalHoliday,
 																	constraint: 'WeekNumberOfDay',
 																	option: {width: '85px',
-																			 decimallength: 1,
 																	}, 
 																	required: true,
 																	enable: enableWeekHDSetInLegalHoliday,
@@ -198,8 +197,7 @@
 							<input id="outLegalHoliday17" data-bind="ntsNumberEditor: {
 																	value: weekHDSet().outLegalHoliday,
 																	constraint: 'WeekNumberOfDay',
-																	option: {width: '85px',
-																			 decimallength: 1,}, 
+																	option: {width: '85px'}, 
 																	required: true,
 																	enable: enableWeekHDSetOutLegalHoliday,
 																	readonly: false,
@@ -246,8 +244,7 @@
 									<input tabindex="18" id="inLegalHoliday18" data-bind="ntsNumberEditor: {
 																			value: fourWkFourHDNumSet().oneWeek().inLegalHoliday,
 																			constraint: 'WeekNumberOfDay',
-																			option: {width: '85px',
-																			 decimallength: 1,}, 
+																			option: {width: '85px'}, 
 																			required: true,
 																			enable: enableOneWeekPubHDInLegalHD,
 																			readonly: false,
@@ -261,8 +258,7 @@
 									<input tabindex="19" id="outLegalHoliday19" data-bind="ntsNumberEditor: {
 																		value: fourWkFourHDNumSet().oneWeek().outLegalHoliday,
 																		constraint: 'WeekNumberOfDay',
-																		option: {width: '85px',
-																			 decimallength: 1,}, 
+																		option: {width: '85px'}, 
 																		required: true,
 																		enable: enableOneWeekPubHDOutLegalHD,
 																		readonly: false},
@@ -287,8 +283,7 @@
 											<input tabindex="20" id="inLegalHoliday20" data-bind="ntsNumberEditor: {
 																			value: fourWkFourHDNumSet().oneWeek().lastWeekAddedDays().inLegalHoliday,
 																			constraint: 'WeekNumberOfDay',
-																			option: {width: '85px',
-																			 decimallength: 1,}, 
+																			option: {width: '85px'}, 
 																			required: true,
 																			enable: enableLastPeriod1WeekPubHD,
 																			readonly: false},
@@ -302,8 +297,7 @@
 											<input tabindex="21" id="outLegalHoliday21" data-bind="ntsNumberEditor: {
 																			value: fourWkFourHDNumSet().oneWeek().lastWeekAddedDays().outLegalHoliday,
 																			constraint: 'WeekNumberOfDay',
-																			option: {width: '85px',
-																			 decimallength: 1,}, 
+																			option: {width: '85px'}, 
 																			required: true,
 																			enable: enableLastPeriod1WeekPubHD,
 																			readonly: false},
@@ -346,8 +340,7 @@
 										<input tabindex="22" id="inLegalHoliday22" data-bind="ntsNumberEditor: {
 																							value: fourWkFourHDNumSet().fourWeek().inLegalHoliday,
 																							constraint: 'FourWeekDay',
-																							option: {width: '85px',
-																									 decimallength: 1,}, 
+																							option: {width: '85px'}, 
 																							required: true,
 																							enable: enable4WeeksPubHDInLegalHD,
 																							readonly: false,
@@ -362,8 +355,7 @@
 										<input tabindex="23" id="outLegalHoliday23" data-bind="ntsNumberEditor: {
 																							value: fourWkFourHDNumSet().fourWeek().outLegalHoliday,
 																							constraint: 'FourWeekDay',
-																							option: {width: '85px',
-																									 decimallength: 1,}, 
+																							option: {width: '85px'}, 
 																							required: true,
 																							enable: enable4WeeksPubHDOutLegalHD,
 																							readonly: false,
@@ -389,8 +381,7 @@
 											<input tabindex="24" id="inLegalHoliday24" data-bind="ntsNumberEditor: {
 																								value: fourWkFourHDNumSet().fourWeek().lastWeekAddedDays().inLegalHoliday,
 																								constraint: 'FourWeekDay',
-																								option: {width: '85px',
-																										 decimallength: 1,}, 
+																								option: {width: '85px'}, 
 																								required: true,
 																								enable: enableLastPeriod4WeekPubHD,
 																								readonly: false,
@@ -405,8 +396,7 @@
 											<input tabindex="25" id="outLegalHoliday25" data-bind="ntsNumberEditor: {
 																									value: fourWkFourHDNumSet().fourWeek().lastWeekAddedDays().outLegalHoliday,
 																									constraint: 'FourWeekDay',
-																						            option: {width: '85px',
-																											 decimallength: 1,}, 
+																						            option: {width: '85px',}, 
 																									required: true,
 																									enable: enableLastPeriod4WeekPubHD,
 																									readonly: false,
