[ccg001] update baseDate param

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
@@ -224,7 +224,7 @@
 								</div>
 							</div>
 							
-							<com:ko tag="ifnot" bind="isSelectAllEmployee">
+							<com:ko tag="if" bind="isShowEmployeeList">
 								<div class="pull-left" style="height: 100%">
 									<div tabindex="18" class="contentkcp"
 										id="employeeinfo"></div>
