--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kml/001/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kml/001/a/index.xhtml
@@ -29,7 +29,7 @@
 							<div class="caret-right caret-background bg-green">
 								<div>
 									<button class="dateControlBtn" data-bind="click: createDialog">#{i18n.getText('KML001_41')}</button>
-									<button class="dateControlBtn" data-bind="click: editDialog, enable: !isInsert()">#{i18n.getText('KML001_42')}</button>
+									<button class="dateControlBtn" data-bind="click: editDialog, enable: !isInsert() &amp;&amp; isLastItem()">#{i18n.getText('KML001_42')}</button>
 								</div>
 								<div id="dateRange-list-content">
 									<table id="dateRange-list" data-bind="ntsGridList: {
