--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/011/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/011/a/index.xhtml
@@ -29,9 +29,9 @@
                          enable: true > 0">#{i18n.getText('CAS011_7')}</button>
             </div>
  
-            <div id="contents-area">
+            <div id="contents-area " class="fixed-flex-layout">
 	            <div class="container cf">    
-	                <div id="content-left" class="pull-left">
+	                <div id="content-left" class="fixed-flex-layout-left">
 	                        <!--A2_001 -->
 	                        <div>#{i18n.getText('CAS011_8')}</div>
 	                        <div style="float: left">
@@ -52,7 +52,7 @@
 	                        </div>
 	                    </div>
 	            
-	                <div id="right-content">
+	                <div id="right-content" class ="fixed-flex-layout-right">
 
                     <table >
                         <colgroup>
