--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/007/a/ksu007.a.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/007/a/ksu007.a.main.css
@@ -1,10 +1,11 @@
 .employeeInfoSearch {
-	margin-top: 135px;
+	margin-top: 20px;
 	display: inline-flex;
 }
 
 .employeeAction {
 	width: 600px;
+	padding: 5px;
 }
 
 .infoKDL003 {
@@ -13,6 +14,7 @@
 
 .periodCovered {
 	display: inline-flex;
+	margin-bottom: 10px;
 }
 
 .lableInfo {
@@ -32,7 +34,7 @@
 }
 
 .selectionEmployee {
-	margin-left: 85px;
+	margin: 0px 30px 0px 90px;
 	padding: 5px;
 	width: 600px;
 }
