add row cas 012

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/012/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/012/a/index.xhtml
@@ -70,6 +70,7 @@
 								dataSource: listRoleIndividual,
 								primaryKey: 'GUID',
 								columns: columns,
+								rows:8,
 								value: currentCode}"></table>
 						</div>
 						<div class="right-content">
