--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/009/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/009/b/index.xhtml
@@ -41,7 +41,7 @@
 						<table id="grid_B" data-bind="ntsGridList: {
 								height: 350,
 								dataSource: itemInitLst,
-								optionsValue: 'id',
+								optionsValue: 'perInfoItemDefId',
 								columns: itemColumns,
 								multiple: true,
 								value: currentItem,
